# gpp

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  gpp-landing.html
.githooks/: post-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.md
.github/actions/gpp-audit-report/: action.yml
.github/actions/gpp-policy-check/: action.yml
.github/actions/gpp-trust-gate/: action.yml
.github/workflows/: ci.yml  pages.yml  publish-crates.yml  release.yml
ci/gitlab/: gpp.gitlab-ci.yml
crates/gpp-anomaly/: Cargo.toml
crates/gpp-anomaly/src/: lib.rs
crates/gpp-cli/: Cargo.toml
crates/gpp-cli/src/: belief.rs  cli.rs  commands.rs  config.rs  main.rs  mcp.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs  repo.rs
crates/gpp-cli/tests/: belief_bisect.rs  cli.rs  cost_report.rs  phase1.rs  policy_enforcement.rs  reviewer_assignment.rs
crates/gpp-core/: Cargo.toml
crates/gpp-core/benches/: object_store.rs
crates/gpp-core/src/: error.rs  hash.rs  lib.rs  object.rs  store.rs  wire.rs
crates/gpp-cost/: Cargo.toml
crates/gpp-cost/src/: lib.rs
crates/gpp-deps/: Cargo.toml
crates/gpp-deps/src/: lib.rs
crates/gpp-diff/: Cargo.toml
crates/gpp-diff/benches/: semantic.rs
crates/gpp-diff/src/: error.rs  lang.rs  lib.rs  line.rs  parser.rs  semantic.rs
crates/gpp-git-bridge/: Cargo.toml
crates/gpp-git-bridge/src/: error.rs  export.rs  import.rs  lib.rs  map.rs
crates/gpp-graphex/: Cargo.toml
crates/gpp-graphex/src/: belief.rs  crypto.rs  error.rs  infer.rs  keys.rs  lib.rs  object.rs  project.rs  query.rs  stale.rs  store.rs
crates/gpp-history/: Cargo.toml
crates/gpp-history/src/: error.rs  lib.rs  log.rs  object.rs  promote.rs  refs.rs
crates/gpp-notify/: Cargo.toml
crates/gpp-notify/src/: lib.rs
crates/gpp-policy/: Cargo.toml
crates/gpp-policy/src/: lib.rs
crates/gpp-rbac/: Cargo.toml
crates/gpp-rbac/src/: lib.rs
crates/gpp-relay/: Cargo.toml
crates/gpp-relay/src/: lib.rs  main.rs
crates/gpp-remote/: Cargo.toml
crates/gpp-remote/src/: lib.rs
crates/gpp-replay/: Cargo.toml
crates/gpp-replay/src/: lib.rs
crates/gpp-review/: Cargo.toml
crates/gpp-review/src/: lib.rs
crates/gpp-sdk/: Cargo.toml
crates/gpp-sdk/src/: lib.rs
crates/gpp-sync/: Cargo.toml
crates/gpp-sync/src/: error.rs  lib.rs  transport.rs
crates/gpp-timeline/: Cargo.toml
crates/gpp-timeline/src/: db.rs  error.rs  ignore.rs  lib.rs  model.rs  scan.rs  watch.rs
crates/gpp-trust/: Cargo.toml
crates/gpp-trust/src/: lib.rs
crates/gpp-tui/: Cargo.toml
crates/gpp-tui/src/: lib.rs
crates/gpp-tui/tests/: dashboard.rs
demos/belief-bisect/: README.md  belief-bisect.cast  record-demo.sh  run-axum-demo.sh
deploy/gpp/: Dockerfile
deploy/relay/: Dockerfile
docs/: ARCHITECTURE.md  CLI_SPEC.md  CONTRIBUTING.md  DATA_MODEL.md  GRAPHEX_PROTOCOL.md  MCP.md  PLUGINS.md  ROADMAP.md  SECURITY_MODEL.md  SYNC_PROTOCOL.md  TODO.md  WORKLOG.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  cli.md  concepts.md  install.md  intro.md  tut-compliance.md  tut-github.md  tut-graphex.md  tut-mcp.md  tut-migrate.md  tut-relay.md
docs/outreach/: MANUAL-CHECKLIST.md  blog-belief-bisect.md  mcp-listing.md  social-drafts.md
extensions/gh-gpp/: README.md  gh-gpp
extensions/neovim-gpp/lua/gpp/: init.lua
extensions/vscode-gpp/: package.json
extensions/vscode-gpp/src/: extension.ts
packaging/homebrew/: gpp.rb
policies/: README.md  pci-dss.policy  secrets-scan.policy  soc2.policy
scripts/: demo.sh  install.sh  publish-crates.sh
site/: index.html
site/assets/: demo.cast
