[package]
name = "gpp-anomaly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp agent behavior pattern detection & alerting"

[dependencies]
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
