[package]
name = "gpp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp command-line interface"

[[bin]]
name = "gpp"
path = "src/main.rs"

[dependencies]
gpp-core = { path = "../gpp-core" }
gpp-timeline = { path = "../gpp-timeline" }
gpp-history = { path = "../gpp-history" }
gpp-diff = { path = "../gpp-diff" }
gpp-git-bridge = { path = "../gpp-git-bridge" }
gpp-graphex = { path = "../gpp-graphex" }
gpp-sdk = { path = "../gpp-sdk" }
gpp-trust = { path = "../gpp-trust" }
gpp-policy = { path = "../gpp-policy" }
gpp-cost = { path = "../gpp-cost" }
gpp-anomaly = { path = "../gpp-anomaly" }
gpp-sync = { path = "../gpp-sync" }
gpp-replay = { path = "../gpp-replay" }
gpp-rbac = { path = "../gpp-rbac" }
gpp-review = { path = "../gpp-review" }
gpp-notify = { path = "../gpp-notify" }
globset.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
