[package]
name = "gpp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp command-line interface"

[[bin]]
name = "gpp"
path = "src/main.rs"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-timeline = { path = "../gpp-timeline", version = "0.1.0" }
gpp-history = { path = "../gpp-history", version = "0.1.0" }
gpp-diff = { path = "../gpp-diff", version = "0.1.0" }
gpp-git-bridge = { path = "../gpp-git-bridge", version = "0.1.0" }
gpp-graphex = { path = "../gpp-graphex", version = "0.1.0" }
gpp-sdk = { path = "../gpp-sdk", version = "0.1.0" }
gpp-trust = { path = "../gpp-trust", version = "0.1.0" }
gpp-policy = { path = "../gpp-policy", version = "0.1.0" }
gpp-cost = { path = "../gpp-cost", version = "0.1.0" }
gpp-anomaly = { path = "../gpp-anomaly", version = "0.1.0" }
gpp-sync = { path = "../gpp-sync", version = "0.1.0" }
gpp-replay = { path = "../gpp-replay", version = "0.1.0" }
gpp-rbac = { path = "../gpp-rbac", version = "0.1.0" }
gpp-review = { path = "../gpp-review", version = "0.1.0" }
gpp-notify = { path = "../gpp-notify", version = "0.1.0" }
gpp-remote = { path = "../gpp-remote", version = "0.1.0" }
gpp-tui = { path = "../gpp-tui", version = "0.1.0" }
gpp-deps = { path = "../gpp-deps", version = "0.1.0" }
globset.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
