[package]
name = "gpp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp content-addressed object store (storage layer)"

[dependencies]
blake3.workspace = true
zstd.workspace = true
serde.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "object_store"
harness = false
