[package]
name = "gpp-cost"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp token/compute cost attribution"

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
