[package]
name = "gpp-git-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp ↔ Git import/export bridge"

[dependencies]
gpp-core = { path = "../gpp-core" }
gpp-history = { path = "../gpp-history" }
git2.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
