[package]
name = "gpp-git-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp ↔ Git import/export bridge"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-history = { path = "../gpp-history", version = "0.1.0" }
git2.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
