[package]
name = "gpp-graphex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp encrypted, versioned knowledge graph"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-history = { path = "../gpp-history", version = "0.1.0" }
gpp-diff = { path = "../gpp-diff", version = "0.1.0" }
rusqlite.workspace = true
globset.workspace = true
age.workspace = true
aes-gcm.workspace = true
zstd.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
tracing.workspace = true
getrandom = "0.2"

[dev-dependencies]
tempfile.workspace = true
