[package]
name = "gpp-history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp curated changeset history + promotion"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-timeline = { path = "../gpp-timeline", version = "0.1.0" }
serde.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
