[package]
name = "gpp-notify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp event system, webhooks, chat integrations"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hmac.workspace = true
sha2.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }

[dev-dependencies]
tempfile.workspace = true
