[package]
name = "gpp-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp compliance-as-code engine"

[dependencies]
serde.workspace = true
toml.workspace = true
regex.workspace = true
globset.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
