[package]
name = "gpp-rbac"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp human permission model (owner/maintainer/contributor/reader)"

[dependencies]
rusqlite.workspace = true
globset.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
