[package]
name = "gpp-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp always-on relay node (sync hub, no special authority)"

[[bin]]
name = "gpp-relay"
path = "src/main.rs"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-sync = { path = "../gpp-sync", version = "0.1.0" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
