[package]
name = "gpp-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp platform integration (GitHub/GitLab/Bitbucket/Git)"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-history = { path = "../gpp-history", version = "0.1.0" }
gpp-git-bridge = { path = "../gpp-git-bridge", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }

[dev-dependencies]
tempfile.workspace = true
