[package]
name = "gpp-review"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp code review workflow engine"

[dependencies]
gpp-core = { path = "../gpp-core" }
gpp-rbac = { path = "../gpp-rbac" }
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
