[package]
name = "gpp-review"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp code review workflow engine"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-rbac = { path = "../gpp-rbac", version = "0.1.0" }
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
