[package]
name = "gpp-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp agent SDK — Tier 3 native agent integration"

[dependencies]
gpp-core = { path = "../gpp-core" }
gpp-timeline = { path = "../gpp-timeline" }
gpp-history = { path = "../gpp-history" }
gpp-graphex = { path = "../gpp-graphex" }
gpp-cost = { path = "../gpp-cost" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
