[package]
name = "gpp-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp agent SDK — Tier 3 native agent integration"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-timeline = { path = "../gpp-timeline", version = "0.1.0" }
gpp-history = { path = "../gpp-history", version = "0.1.0" }
gpp-graphex = { path = "../gpp-graphex", version = "0.1.0" }
gpp-cost = { path = "../gpp-cost", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
