[package]
name = "gpp-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp continuous timeline capture engine"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
globset.workspace = true
walkdir.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true
