[package]
name = "gpp-trust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp agent reputation & behavioral RBAC"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
