[package]
name = "gpp-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp interactive terminal UI (ratatui)"

[dependencies]
gpp-core = { path = "../gpp-core" }
gpp-timeline = { path = "../gpp-timeline" }
gpp-history = { path = "../gpp-history" }
gpp-trust = { path = "../gpp-trust" }
gpp-anomaly = { path = "../gpp-anomaly" }
gpp-cost = { path = "../gpp-cost" }
gpp-review = { path = "../gpp-review" }
gpp-notify = { path = "../gpp-notify" }
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
