[package]
name = "gpp-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gpp interactive terminal UI (ratatui)"

[dependencies]
gpp-core = { path = "../gpp-core", version = "0.1.0" }
gpp-timeline = { path = "../gpp-timeline", version = "0.1.0" }
gpp-history = { path = "../gpp-history", version = "0.1.0" }
gpp-trust = { path = "../gpp-trust", version = "0.1.0" }
gpp-anomaly = { path = "../gpp-anomaly", version = "0.1.0" }
gpp-cost = { path = "../gpp-cost", version = "0.1.0" }
gpp-review = { path = "../gpp-review", version = "0.1.0" }
gpp-notify = { path = "../gpp-notify", version = "0.1.0" }
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
